--- a/index.html
+++ b/index.html
@@ -249,123 +249,6 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Resume</h2>
-          <!--<p></p>-->
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-<!--        <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-          -->
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4><i class="bi bi-mortarboard"></i>&nbsp Master of City and Regional Planning</h4>
-              <h5>2015</h5>
-              <p><em>Edward J. Bloustin School, Rutgers University, New Brunswick, NJ</em></p>
-              <li>Concentration in Transportation Planning</l>
-              <li>Graduate Certificate in Public Policy</l>
-            </div>
-            <div class="resume-item">
-              <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts, Political Studies</h4>
-              <h5>2010</h5>
-              <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
-              <!-- <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
-              <li>Major in Political Studies</li> -->
-              <li>Minor in Latin American and Iberian Studies</l> 
-            </div>
-
-          <h3 class="resume-title">Awards and Presentations</h3>
-          <div class="resume-item">
-            <h4><i class="bi bi-webcam"></i>&nbsp Pedestrian Safety and Arterial Streets</h4>
-            <h5>2021</h5>
-            <p><em>Pedestrian and Bicycle Information Center Webinar</em></p>
-            <li>Provided context on current pedestrian safety challenges.</l>
-            <li>Presented systemic context-sensitive design solutions.</l>
-          </div>
-          <div class="resume-item">
-            <h4><i class="bi bi-award"></i>&nbsp 1st Place, Micromobility Sandbox Design Competition</h4>
-            <h5>2020</h5>
-            <p><em>Institute for Transportation Engineers</em></p>
-            <li>Lead planner for winning urban corridor design.</l>
-            <li>Created graphics, guided safety analysis and countermeasures.</l>
-            <li>Helped write and lay-out competition entry.</li>
-          </div>
-          <div class="resume-item">
-            <h4><i class="bi bi-webcam"></i>&nbsp Minnesota Systemic Pedestrian Safety Analysis</h4>
-            <h5>2020</h5>
-            <p><em>Minnesota Transportation Conference</em></p>
-            <li>Presented results of statewide systemic pedestrian safety analysis with state DOT partners.</l>
-          </div>
-        </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Experience</h3>
-            <div class="resume-item">
-              <h4><i class="bi bi-building"></i>&nbsp Planner II</h4>
-              <h5>2019 - 2021</h5>
-              <p><em>Toole Design, Silver Spring, MD </em></p>
-              <ul>
-                <li>Managed active transportation projects including design guidelines, bikeshare program support, wayfinding plans, evaluations, and communication toolkits.</li>
-                <li>Conducted complex demographic, economic, safety, and demand analyses. Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures. </li>
-                <li>Communicated planning results via maps, charts, graphics, memos, presentations, and reports.</li>
-                <li>Led public outreach including surveys; workshops; and on-line and in-person events. Engaged community, business, and stakeholder groups.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4><i class="bi bi-cone-striped"></i>&nbsp Transportation Safety Analyst</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Center for Advanced Infrastructure and Transportation, Piscataway, NJ</em></p>
-              <ul>
-                <li>Co-authored annual State Highway Safety Plan including charts, graphs, and technical narrative.</li>
-                <li>Analyzed crashes for and provided technical support to State, MPO, and County, and City safety initiatives.</li>
-                <li>Transformed crash data and coordinated with vendor to maintain online interactive analysis and mapping platform. </li>
-                <li>Delivered 20+ trainings in crash data analysis.</li>
-                <li>Evaluated a pedestrian safety campaign at a large MPO.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4><i class="bi bi-bicycle"></i>&nbsp Transportation Specialist</h4>
-              <h5>2016</h5>
-              <p><em>Cross County Connection TMA, Marlton, NJ</em></p>
-              <ul>
-                <li>Led Safe Routes to School travel plan development. Developed bicycle and pedestrian infrastructure recommendations, street design renderings, maps, and reports.</li>
-                <li>Engaged and consulted with county, municipal, and community stakeholders to advance complete streets policy adoption and infrastructure improvements.</li>  
-                <li>Reviewed and ranked Safe Routes to School and Transportation Alternatives grants for New Jersey Department of Transportation.</li>  
-                <li>Created land use/population analyses, route alignments, and timetables for public transit service modifications using GIS, Illustrator, and Excel.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4><i class="bi bi-person-lines-fill"></i>&nbsp Transportation Planning Assistant</h4>
-              <h5>2015</h5>
-              <p><em>Rutgers Department of Transportation Services, New Brunswick, NJ</em></p>
-              <ul>
-                <li>Planned bicycle and pedestrian safety enhancements to implement Transportation Master Plan.</li>
-                <li>Provided technical analysis for $1M+ bikeshare grant application.</li>
-                <li>Created GIS bicycle parking inventory database and updated university bicycle maps.</li>
-                <li>Fielded and statistically analyzed transportation survey with 900+ respondents.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
-
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
@@ -494,6 +377,122 @@
     </section>
     
     <!-- End Portfolio Section -->
+
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Resume</h2>
+          <!--<p></p>-->
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+<!--        <h3 class="resume-title">Sumary</h3>
+            <div class="resume-item pb-0">
+              <h4>Alex Smith</h4>
+              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <ul>
+                <li>Portland par 127,Orlando, FL</li>
+                <li>(123) 456-7891</li>
+                <li>alice.barkley@example.com</li>
+              </ul>
+            </div>
+          -->
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4><i class="bi bi-mortarboard"></i>&nbsp Master of City and Regional Planning</h4>
+              <h5>2015</h5>
+              <p><em>Edward J. Bloustin School, Rutgers University, New Brunswick, NJ</em></p>
+              <li>Concentration in Transportation Planning</l>
+              <li>Graduate Certificate in Public Policy</l>
+            </div>
+            <div class="resume-item">
+              <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts, Political Studies</h4>
+              <h5>2010</h5>
+              <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
+              <!-- <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
+              <li>Major in Political Studies</li> -->
+              <li>Minor in Latin American and Iberian Studies</l> 
+            </div>
+
+          <h3 class="resume-title">Awards and Presentations</h3>
+          <div class="resume-item">
+            <h4><i class="bi bi-webcam"></i>&nbsp Pedestrian Safety and Arterial Streets</h4>
+            <h5>2021</h5>
+            <p><em>Pedestrian and Bicycle Information Center Webinar</em></p>
+            <li>Provided overview of current pedestrian safety trends.</l>
+            <li>Presented systemic context-sensitive design solutions.</l>
+          </div>
+          <div class="resume-item">
+            <h4><i class="bi bi-award"></i>&nbsp Winner, Micromobility Sandbox Design Competition</h4>
+            <h5>2020</h5>
+            <p><em>Institute for Transportation Engineers</em></p>
+            <li>Lead planner for winning urban corridor design.</l>
+            <li>Created graphics, guided safety analysis and countermeasures.</l>
+          </div>
+          <div class="resume-item">
+            <h4><i class="bi bi-webcam"></i>&nbsp Minnesota Systemic Pedestrian Safety Analysis</h4>
+            <h5>2020</h5>
+            <p><em>Minnesota Transportation Conference</em></p>
+            <li>Presented results of statewide systemic pedestrian safety analysis with state DOT partners.</l>
+          </div>
+        </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Experience</h3>
+            <div class="resume-item">
+              <h4><i class="bi bi-building"></i>&nbsp Planner II</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>Toole Design, Silver Spring, MD </em></p>
+              <ul>
+                <li>Managed active transportation projects including design guidelines, bikeshare program support, wayfinding plans, evaluations, and communication toolkits.</li>
+                <li>Conducted complex demographic, economic, safety, and demand analyses. Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures. </li>
+                <li>Communicated planning results via maps, charts, graphics, memos, presentations, and reports.</li>
+                <li>Led public outreach including surveys; workshops; and on-line and in-person events. Engaged community, business, and stakeholder groups.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4><i class="bi bi-cone-striped"></i>&nbsp Transportation Safety Analyst</h4>
+              <h5>2017 - 2018</h5>
+              <p><em>Center for Advanced Infrastructure and Transportation, Piscataway, NJ</em></p>
+              <ul>
+                <li>Co-authored annual State Highway Safety Plan including charts, graphs, and technical narrative.</li>
+                <li>Analyzed crashes for and provided technical support to State, MPO, and County, and City safety initiatives.</li>
+                <li>Transformed crash data and coordinated with vendor to maintain online interactive analysis and mapping platform. </li>
+                <li>Delivered 20+ trainings in crash data analysis.</li>
+                <li>Evaluated a pedestrian safety campaign at a large MPO.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4><i class="bi bi-bicycle"></i>&nbsp Transportation Specialist</h4>
+              <h5>2016</h5>
+              <p><em>Cross County Connection TMA, Marlton, NJ</em></p>
+              <ul>
+                <li>Led Safe Routes to School travel plan development. Developed bicycle and pedestrian infrastructure recommendations, street design renderings, maps, and reports.</li>
+                <li>Engaged and consulted with county, municipal, and community stakeholders to advance complete streets policy adoption and infrastructure improvements.</li>  
+                <li>Reviewed and ranked Safe Routes to School and Transportation Alternatives grants for New Jersey Department of Transportation.</li>  
+                <li>Created land use/population analyses, route alignments, and timetables for public transit service modifications using GIS, Illustrator, and Excel.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4><i class="bi bi-person-lines-fill"></i>&nbsp Transportation Planning Assistant</h4>
+              <h5>2015</h5>
+              <p><em>Rutgers Department of Transportation Services, New Brunswick, NJ</em></p>
+              <ul>
+                <li>Planned bicycle and pedestrian safety enhancements to implement Transportation Master Plan.</li>
+                <li>Provided technical analysis for $1M+ bikeshare grant application.</li>
+                <li>Created GIS bicycle parking inventory database and updated university bicycle maps.</li>
+                <li>Fielded and statistically analyzed transportation survey with 900+ respondents.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
 
     <!-- ======= Services Section ======= -->
 <!--    <section id="services" class="services">
