--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
             <li>Presented systemic context-sensitive design solutions.</l>
           </div>
           <div class="resume-item">
-            <h4><i class="bi bi-award"></i>&nbsp Winner, Micromobility Sandbox Design Competition</h4>
+            <h4><i class="bi bi-award"></i>&nbsp Winner, Micromobility Sandbox Competition</h4>
             <h5>2020</h5>
             <p><em>Institute for Transportation Engineers</em></p>
-            <li>Lead planner for winning urban corridor design.</l>
+            <li>Lead planner for urban corridor design.</l>
             <li>Created graphics, guided safety analysis and countermeasures.</l>
           </div>
           <div class="resume-item">
