--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -203,8 +203,8 @@
               <ul>
                 <li><strong>Category</strong>: Vision Zero</li>
                 <li><strong>Client</strong>: Montgomery Planning</li>
-                <li><strong>Project date</strong>: April, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://montgomeryplanning.org/planning/transportation/vision-zero/vision-zero-community-toolkit/" target="_blank">www.montgomeryplanning.org</a></li>
+                <li><strong>Date</strong>: April, 2021</li>
+                <li><strong>Tool</strong>: <a href="https://montgomeryplanning.org/planning/transportation/vision-zero/vision-zero-community-toolkit/" target="_blank">www.montgomeryplanning.org</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
