--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -137,10 +137,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / PBIC Webinar: Pedestrian Safety on Arterial Streets</h2>
+          <h2>Portfoio / PBIC Webinar: Pedestrian Safety on Arterial Streets</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfoio</li>
           </ol>
         </div>
 
@@ -192,8 +192,8 @@
               <ul>
                 <li><strong>Category</strong>: Pedestrian Safety</li>
                 <li><strong>Client</strong>: Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
-                <li><strong>Project date</strong>: June, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank">www.pedbikeinfo.org</a></li>
+                <li><strong>Date</strong>: June, 2021</li>
+                <li><strong><a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank">Webinar Recording</a></strong> </li>
               </ul>
             </div>
             <div class="portfolio-description">
