--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -137,10 +137,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Montgomery Planning Vision Zero Community Toolkit</h2>
+          <h2>Portfoio / Montgomery Planning Vision Zero Community Toolkit</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfoio</li>
           </ol>
         </div>
 
