--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -191,9 +191,9 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: Pedestrian Safety</li>
-                <li><strong>Client</strong>: Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
+                <li><strong>Clients</strong>: Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
                 <li><strong>Date</strong>: June, 2021</li>
-                <li><strong><a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank">Webinar Recording</a></strong> </li>
+                <li><strong>Link:</strong><a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank">Webinar Recording</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
