--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">All</li> 
               <li data-filter=".filter-plan">Plan</li>
               <li data-filter=".filter-safety">Safety</li>
               <li data-filter=".filter-public-engagement">Public Engagement</li>
               <li data-filter=".filter-research-evaluation">Research & Evaluation</li>
-<!--              <li data-filter=".filter-research-evaluation">Toole</li> -->
+<!--              <li data-filter=".filter-toole">Toole</li> -->
             </ul>
           </div>
         </div>
