--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -137,13 +137,13 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Alexandria Dockless Mobility Pilot Evaluation</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Alexandria Dockless Mobility Pilot Evaluation</h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -199,34 +199,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Shared Mobility</li>
                 <li><strong>Client</strong>: City of Alexandria, VA</li>
+                <li><strong>Role</strong>: Project Manager</li>
                 <li><strong>Date</strong>: November, 2019</li>
-                <li><strong>Link</strong>: <a href="https://www.alexandriava.gov/DocklessMobility#PhaseIIPilotProgram" target="_blank">Report</a></li>
+                <li><strong>Link</strong>: <a href="https://www.alexandriava.gov/DocklessMobility#PhaseIIPilotProgram" target="_blank">Full Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                The Montgomoery Planning Vision Zero Community Toolkit describes roadway design treatments available for use in the community improve safety and comfort for all road users.
+               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program. I proposed the evaluation approach and coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the the pilot's impacts across the community, I proposed policy changes for the continuation of the program, including new geographic distribution requirements for scooter deployment based on the results of our equity analyis. I coordinated an independent injury report from the health department to clearly understand the program's safety impacts. Managed project timeline, budget, and deliverable.
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Project Manager
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Managed all aspects of project.</li>
-                <li>Led selection of most essential safety tools for inclusion in toolkit.</li>
-                <li>Describerd Vision Zero and Systemic Safety concepts in plain langauge.</li>
-                <li>Revised toolkit based on client feedback.</li>
-                <li>Designed and developed over 30 cut-sheets detailing tool purposes, uses, safety benefits and engineering details.</li>
+                This project represents a collective effort by many people at Toole Design Group and partners at the Alexandria Transportation and Environmental Services d ivision. I did not create the report layout and graphics.
               </p>
             </div>
           </div>
