--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <img src="assets/img/portfolio/alexandria-eval.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="alexandria-eval.html" title="More Details"><i class="bi bi-info-circle"></i></a>
-                <a href="https://www.alexandriava.gov/DocklessMobility" title="Read Report"  target="_blank"><i class="bx bx-link"></i></a>
+                <a href="https://www.alexandriava.gov/DocklessMobility" title="Project Website"  target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -367,7 +367,7 @@
               <img src="assets/img/portfolio/ite-micromobility.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="ite-micromobility.html" title="More Details"><i class="bi bi-info-circle"></i></a>
-                <a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" title="Full Competition Entry"  target="_blank"><i class="bx bx-link"></i></a>
+                <a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" title="View Competition Entry"  target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
