--- a/index.html
+++ b/index.html
@@ -639,15 +639,19 @@
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="phone">
-                <a href="tel:+1-609-933-6049"><i class="bi bi-phone"></i></a>
+                <i class="bi bi-phone"></i></a>
                 <h4>Phone:</h4>
-                <p><a href="tel:+1-609-933-6049" style="color: #173b6c">609-933-6049</a></p>
+                <p>
+                  <span class="rev pho"style="color: #173b6c">339</a></span>
+                </p>
               </div>
               
               <div class="email">
-                <a href="mailto:thomasnhillman@gmail.com"><i class="bi bi-envelope"></i></a>
+              <i class="bi bi-envelope"></i>
                 <h4>E-Mail:</h4>
-                <p><a href="mailto:thomasnhillman@gmail.com" style="color: #173b6c">thomas.n.hillman@gmail.com</a></p>
+                <p>
+                  <span class="rev eml"style="color: #173b6c">mg@namllih.n</a></span>
+                </p>
               </div>
 
               <div class="linkedin">
