--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to guide infrastructure investments in alignment with community values and to increase climate and social resilience.</p>
+          <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to guide infrastructure investments that are aligned with community values and increase climate and social resilience.</p>
           <br>
           <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, and active transportation efforts. He has helped lead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
