--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -216,7 +216,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project represents a collective effort by many people at Toole Design Group and partners at the Alexandria Transportation and Environmental Services division. I did not create the report layout and graphics.
+                This project represents a collective effort by many people at Toole Design Group and partners at the Alexandria Department of Transportation & Environmental Services. I did not create the report layout and graphics.
               </p>
             </div>
           </div>
