--- a/northern-gateway.html
+++ b/northern-gateway.html
@@ -131,19 +131,17 @@
   End OLD Header -->
 
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Northern Gateway Wayfinding Plan</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Northern Gateway Wayfinding Plan</h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -179,35 +177,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Neighborhood Revitalization</li>
-                <li><strong>Client</strong>: Maryland-National Capital Park and Planning Commission — Prince George's County Planning</li>
-                <li><strong>Project date</strong>: Summer 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.mncppc.org/4773/Northern-Gateway-Wayfinding-and-Signage-" target="_blank">www.mncppc.org/4773</a></li>
+                <li><strong>Client</strong>: Maryland-National Capital Park and Planning Commission — Prince George's County Planning Department</li>
+                <li><strong>Role</strong>: Subconsultant Project Manager</li>                
+                <li><strong>Date</strong>: Summer 2021</li>
+                <li><strong>Link</strong>: <a href="https://www.mncppc.org/4773/Northern-Gateway-Wayfinding-and-Signage-" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                The Project Team developed a Wayfinding System and Signage Plan to inform, guide, and navigate residents and visitors to, from, and throughout the Northern Gateway, including vibrant commercial districts on University Boulevard, new Purple Line transit stations, and community destinations such as schools, libraries, and services.
+                This new Wayfinding System and Signage Plan was developed to inform, guide, and navigate residents and visitors to, from, and throughout the Northern Gateway area of Prince George's County. The project extent is adjacent to the northeastern border of the District of Columbia and includes vibrant commercial districts on University Boulevard, new Purple Line transit stations, and numerous community destinations such as schools, libraries, and services. I presented at two project stakeholder meetings and the first community meeting. I also created and led a bilingual (English and Spanish) charrette activity. I worked with the client and Prime consultant to envision the wayfinding sign family and collaborated with our graphic design team to produce the initial draft concept. I then revised the draft sign concepts using the Adobe Creative Suite, based on community and agency partner feedback.</li>
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Project Manager - Subconsultant
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Presented at community meeting.</li>
-                <li>Created charrette map activity.</li>
-                <li>Led bilingual (English and Spanish) charrette.</li> 
-                <li>Envisioned and developed wayfinding sign family.</li> 
-                <li>Delegated draft sign concept production.</li>
-                <li>Revised draft sign concepts in Adobe CS, based on community and agency feedback.</li>
+                Initial sign prototypes were produced collaboratively with graphic design colleagues at Toole Design Group with engineering review. Project summary report written by the Prime consultant. 
               </p>
             </div>
           </div>
